# final_task

./: .docker-compose.yaml.swp  .gitignore  Dockerfile  README.md  app.py  db.sqlite3  docker-compose.yaml  pyproject.toml
finaltask/: asgi.py  settings.py  urls.py  wsgi.py
images/: models.py  schemas.py  utils.py  views.py
images/migrations/: 0001_initial.py  0002_imagesartifact_processed_image.py  0003_imagesartifact_uploaded_image.py
